@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_packet_soap.c,v 1.36.2.1 2004/08/26 12:20:13 dmitry Exp $ */
+/* $Id: php_packet_soap.c,v 1.36.2.2 2004/08/27 07:06:05 dmitry Exp $ */
 
 #include "php_soap.h"
 
@@ -251,8 +251,12 @@ int parse_packet_soap(zval *this_ptr, char *buffer, int buffer_size, sdlFunction
 					param = (*h_param);
 					if (fnb->style == SOAP_DOCUMENT) {
 						if (param->element) {
+							name = param->element->name;
+							ns = param->element->namens;
+/*
 							name = param->encode->details.type_str;
 							ns = param->encode->details.ns;
+*/
 						} else {
 							name = param->paramName;
 						}
